# OpenSift

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_zh.md  fly.toml  mkdocs.yml  opensift-config.example.yaml  pyproject.toml  railway.toml  render.yaml
.github/workflows/: ci.yml  docs.yml  publish-npm.yml  publish.yml
deployments/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.minimal.yml  docker-compose.test.yml
docs/: architecture.md  demo.md  index.md  sdk.md  wismodel.md
docs/adapters/: custom.md  elasticsearch.md  meilisearch.md  opensearch.md  overview.md  solr.md  wikipedia.md
docs/api/: batch.md  health.md  plan.md  search.md
docs/demo-app/: index.html
docs/development/: contributing.md  testing.md
docs/guide/: configuration.md  quickstart.md
sdks/: README.md
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: client.test.ts  client.ts  errors.ts  index.ts  types.ts
src/opensift/: __init__.py  cli.py
src/opensift/adapters/: __init__.py
src/opensift/adapters/atomwalker/: __init__.py  adapter.py
src/opensift/adapters/base/: __init__.py  adapter.py  exceptions.py  registry.py
src/opensift/adapters/elasticsearch/: __init__.py  adapter.py
src/opensift/adapters/meilisearch/: __init__.py  adapter.py
src/opensift/adapters/opensearch/: __init__.py  adapter.py
src/opensift/adapters/solr/: __init__.py  adapter.py
src/opensift/adapters/wikipedia/: __init__.py  adapter.py
src/opensift/api/: __init__.py  app.py  deps.py
src/opensift/api/static/: debug.html  search.html
src/opensift/api/v1/: __init__.py  router.py
src/opensift/api/v1/endpoints/: batch.py  health.py  plan.py  search.py
src/opensift/cache/: __init__.py  manager.py
src/opensift/client/: __init__.py  client.py
src/opensift/config/: __init__.py  settings.py
src/opensift/core/: __init__.py  classifier.py  engine.py
src/opensift/core/llm/: __init__.py  client.py  prompts.py
src/opensift/core/planner/: __init__.py  planner.py
src/opensift/core/verifier/: __init__.py  verifier.py
src/opensift/models/: __init__.py  assessment.py  criteria.py  document.py  paper.py  query.py  response.py  result.py
src/opensift/observability/: __init__.py  logging.py
tests/: conftest.py
tests/integration/: conftest.py  test_elasticsearch.py  test_meilisearch.py  test_opensearch.py  test_solr.py  test_wikipedia.py
tests/unit/adapters/: test_atomwalker.py  test_meilisearch.py  test_opensearch.py  test_solr.py  test_wikipedia.py
tests/unit/api/: test_debug.py  test_health.py  test_plan.py  test_search.py
tests/unit/client/: test_client.py
tests/unit/core/: test_classifier.py  test_engine.py  test_llm.py  test_planner.py  test_verifier.py
